<resources>
    <string name="app_name">VarejoDigital</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Cadastrar-se</string>
    <string name="action_reload">Reload</string>

    <string name="product_detail">Detalhe do Produto</string>
    <string name="employee_detail">Informações do Funcionário</string>



    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_employee_detail">EmployeeDetailActivity</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="title_activity_chart">Gráfico Período</string>


    <string name="settings_category">Configurações</string>
    <string name="original_preference">Original Preference</string>
    <string name="original_checkbox_preference">Alerta</string>
    <string name="original_summary">Original Summary</string>
    <string name="original_summary_with_icon">Original Summary + Icon</string>
    <string name="original_checkbox_key">original_checkbox_key</string>
    <string name="original_checkbox_summary_on">Alerta Ligado</string>
    <string name="original_checkbox_summary_off">Alerta Desligado</string>


    <string name="alert_warning">Alerta:\n\n Produto Coca-Cola 2L abaixo do estoque míminio.</string>
    <string name="see_period">Informar Período</string>
    <string name="title_activity_billing_by_date">BillingByDateActivity</string>
    <string name="title_activity_bar_code_scan">BarCodeScanActivity</string>
    <string name="dialog_message_update_qtd">Quantidade atualizada com sucesso!</string>
    <string name="ok">OK</string>
    <string name="erro_conexion_try_again">Erro de Conexão, por favor tente novamente!</string>

    <string name="product_name_var"><![CDATA[Nome: <strong>%1$s</strong>]]></string>
    <string name="product_channel_var"><![CDATA[Canal: <strong>%1$s</strong>]]></string>

    <string name="fat_title_tks_medio_var">Ticket Médio atual: R$ %1$s</string>
    <string name="fat_title_acumulado_var">Valor Acumulado atual: R$ %1$s</string>
    <string name="fat_title_tks_var">Nº Tickets atual: %1$s</string>
</resources>
